# HelloWorld

./: .gitignore  pyproject.toml
.github/workflows/: build-android.yml  build-linux.yml  build-windows.yml  build.yml
demo/: README.md
demo/.github/workflows/: build-linux.yml
demo/frontend/: .env.development  index.html  package-lock.json  vite.config.ts
demo/frontend/src/: App.vue
demo/scripts/: termux_compile.sh
demo/src/demo/: __init__.py  app.py
frontend/: package.json
helloworld/: CHANGELOG  pyproject.toml
helloworld/src/helloworld/: __main__.py  main.py
helloworld/src/helloworld/app/: __init__.py  main.py  task.py
helloworld/src/helloworld/app/api/: router.py
helloworld/src/helloworld/app/cache/: service.py
helloworld/src/helloworld/app/client/: __init__.py  client.py
helloworld/src/helloworld/app/db/: database.py  models.py  utils.py
helloworld/src/helloworld/app/device/: __init__.py  manager.py
helloworld/src/helloworld/app/driver/: __init__.py  connector.py
helloworld/src/helloworld/app/models/: device.py
helloworld/src/helloworld/app/sched/: __init__.py  config.py  schemas.py
scripts/: termux_compile.sh
src/demo/: __main__.py
src/helloworld/: __main__.py
src/helloworld/app/: setting.py
src/helloworld/app/api/: base.py  schemas.py
src/helloworld/app/cache/: __init__.py  service.py
src/helloworld/app/core/: gui.py  server.py  web.py
src/helloworld/app/device/: factory.py
src/helloworld/app/log/: logger.py
src/helloworld/app/sched/: routers.py  scheduler.py  utils.py
src/helloworld/app/utils/: network.py
(+25 files in other folders)
