[project]
name = "demo"
version = "0.1.0"
description = "A cross-platform application built with PyApp"
authors = [{name = "Developer", email = "dev@example.com"}]
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.136.1",
    "uvicorn>=0.30.0",
    "platformdirs>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "httpx>=0.24.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pyapp]
python_version = "3.11"
app_module = "demo"
port = 18080

[tool.pyapp.android]
package_name = "com.example.demo"
min_sdk = 24
target_sdk = 34
permissions = [
    "INTERNET",
    "FOREGROUND_SERVICE",
]
dependencies = [
    "pydantic_core==2.46.3",
    "pydantic==2.13.3",
    "fastapi>=0.136.1",
    "uvicorn>=0.30.0",
    "platformdirs>=4.0.0",
]
pip_index_url = "https://jzhenli.github.io/my-pypi/"

[tool.pyapp.windows]
deployment = "standalone"
create_service = true
service_name = "Demo"

[tool.pyapp.linux]
deployment = "shared"
install_systemd = true
service_name = "demo"